# aruco_landing

./: README.md
models/aruco_marker/: model.config  model.sdf
models/aruco_marker/materials/scripts/: aruco.material
models/custom_iris/: model.config  model.sdf
models/iris_with_gimbal/: model.sdf
src/takeoff/: package.xml  setup.py
src/takeoff/takeoff/: auto_takeoff.py
worlds/: custom_runway.sdf  custom_runway_vegetation_1.sdf  iris_runway.sdf  iris_warehouse.sdf
