<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>takeoff</name>
  <version>0.0.0</version>
  <description>Autonomous Takeoff with ArUco Detection</description>

  <maintainer email="gouravk24@iitk.ac.in">gouravk24</maintainer>
  <license>Apache-2.0</license>

  <!-- Core dependencies -->
  <exec_depend>rclpy</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
